# petervaro

./: .gitignore  CNAME  index.html  install.sh  public.gpg  pyproject.toml
avatar/: ascii  ascii-0  ascii-1  ascii-2  bg.c
cv/: __init__.py  cv.html
cv/content/: data.toml
cv/src/: __init__.py  cv.py
cv/src/sections/: __init__.py  basic.py
cv/src/sections/education/: __init__.py  education.py  school.py
cv/src/sections/experience/: __init__.py  experience.py  job.py
cv/src/sections/skills/: __init__.py  skills.py
cv/src/sections/skills/disciplines/: __init__.py  disciplines.py
cv/src/sections/skills/disciplines/groups/: __init__.py  groups.py  value.py
cv/style/: _constants.scss  index.css  index.scss
img/logo/engineer/logo/: Cargo.toml
img/logo/engineer/logo/src/: main.rs
scripts/: __init__.py  build.py  server.py
shared/: __init__.py
shared/content/: data.toml
shared/src/: __init__.py  info.py  meta.py  shared.py
website/: __init__.py  index.html  src.py
website/content/: index.toml
website/js/: anim.js  index.js
website/style/: index.css  index.scss  reset.scss
website/template/: index.j2
